deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cafe
  namespace: cafe
spec:
  selector:
    app: cafe
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
