deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reverse-proxy-workaround
  namespace: nginx-gateway
spec:
  ingressClassName: nginx
  rules:
  - host: tonygilkerson.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cafe
            port:
              number: 80
  tls:
  - hosts:
    - tonygilkerson.us
